# access-qa-extraction

./: .env.example  .gitignore  CLAUDE.md  LOCAL_DIRECTIONS.md  README.md  pyproject.toml
docs/: GUIDED-TOUR.md  RAG_RESEARCH.md  TO_FACTOID_OR_NOT.md  TRACE-TOUR.extract.md  design-extraction-rethink-2026-02-18.md  hallucination-mitigation-plan.md  qa-review-observations.md  system-overview-2026-02-17.md  tier4-run-log-2026-02-12.md  tier4-run-log-2026-02-13.md
scripts/: run_extraction_gh200.py  start_vllm_server.sh
src/access_qa_extraction/: __init__.py  argilla_client.py  citation_validator.py  cli.py  config.py  llm_client.py  mcp_client.py  models.py  parsers.py  question_categories.py
src/access_qa_extraction/extractors/: __init__.py  affinity_groups.py  allocations.py  base.py  compute_resources.py  documents.py  nsf_awards.py  software_discovery.py
src/access_qa_extraction/generators/: __init__.py  comparisons.py  factoids.py  incremental.py  judge.py
src/access_qa_extraction/output/: __init__.py  jsonl_writer.py
tests/: __init__.py  test_affinity_groups_extractor.py  test_allocations_extractor.py  test_argilla_client.py  test_bonus_generation.py  test_citation_validator.py  test_comparison_generator.py  test_factoid_generation.py  test_incremental.py  test_judge.py  test_models.py  test_nsf_awards_extractor.py
