[project]
name = "access-qa-extraction"
version = "0.1.0"
description = "Q&A pair extraction from ACCESS-CI MCP servers for fine-tuning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "datasets>=2.14.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "argilla>=2.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
local = [
    "openai>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "triton",
]

[project.scripts]
qa-extract = "access_qa_extraction.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/access_qa_extraction"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
